==> baobuibk/Sang_IOU/BSP/TWI/twi.c <==
#define F_CPU 8000000UL
#include "twi.h"
#include <math.h>
#include <stdlib.h>
#include <stdbool.h>
#include <inttypes.h>
#include <avr/io.h>
#include <avr/interrupt.h>
#include <util/delay.h>
#include <compat/twi.h>
#define cbi(sfr, bit) (_SFR_BYTE(sfr) &= ~(1<<bit))
#define sbi(sfr, bit) (_SFR_BYTE(sfr) |= (1<<bit))

void twi_init(void)
{
  // initialize state
  twi_state = TWI_READY;
  twi_sendStop = true;		// default value
  twi_inRepStart = false;
  
  // activate internal pullups for twi.
  //PORTC |= 0x03;

  // initialize twi prescaler and bit rate
  //SCL CLK= TWI_FREQ = F_CPU/(16+2*TWBR*Prescaler)
  //TWPS0 =0, TWPS1 =0 => Prescaler = 1.
  cbi(TWSR, TWPS0);
  cbi(TWSR, TWPS1);
  
  //TWBR = ((F_CPU / TWI_FREQ) - 16) / 2;
  TWBR = 32; //TWI_FREQ =100K

  // enable twi module, acks, and twi interrupt
  TWCR = (1<<TWEN) | (1<<TWIE) | (1<<TWEA);
}

uint8_t twi_readFrom(uint8_t address, uint8_t length, uint8_t sendStop)
{
  uint8_t i;

  // ensure data will fit into buffer
  if(TWI_BUFFER_LENGTH < length){
    return 0;
  }

  //check if twi ready, return 0 if not ready
  if (TWI_READY != twi_state)
  {
	  return 0;
  } 
  twi_state = TWI_MRX;
  twi_sendStop = sendStop;
  // reset error state (0xFF.. no error occurred)
  twi_error = 0xFF;

  // initialize buffer iteration vars
  twi_master_rxBufferIndex = 0;
  twi_master_rxBufferLength = length-1;  // This is not intuitive, read on...
  // On receive, the previously configured ACK/NACK setting is transmitted in
  // response to the received byte before the interrupt is signalled. 
  // Therefore we must actually set NACK when the _next_ to last byte is
  // received, causing that NACK to be sent in response to receiving the last
  // expected byte of data.

  // build sla+r, slave device address + r bit
  twi_slarw = 1;
  twi_slarw |= address << 1;
  TWDR = twi_slarw;
  
  if (true == twi_inRepStart) {
    // if we're in the repeated start state, then we've already sent the start,
    // (@@@ we hope), and the TWI statemachine is just waiting for the address byte.
    // We need to remove ourselves from the repeated start state before we enable interrupts,
    // since the ISR is ASYNC, and we could get confused if we hit the ISR before cleaning
    // up. Also, don't enable the START interrupt. There may be one pending from the 
    // repeated start that we sent ourselves, and that would really confuse things.
    twi_inRepStart = false;			// remember, we're dealing with an ASYNC ISR
    do {
      TWDR = twi_slarw;
    } while(TWCR & (1<<TWWC));
    TWCR =(1<<TWINT) | (1<<TWEA) | (1<<TWEN) | (1<<TWIE);	// enable INTs, but not START
  } else {
    // send start condition
    TWCR = (1<<TWEN) | (1<<TWIE) | (1<<TWEA) | (1<<TWINT) | (1<<TWSTA);
  }

  // wait for read operation to complete
  while(TWI_MRX == twi_state);

  if (twi_master_rxBufferIndex < length) {
    length = twi_master_rxBufferIndex;
  }
  // copy twi buffer to data
  //for(i = 0; i < length; ++i){
  //data[i] = twi_master_rxBuffer[i];
  //}
  return length;
}

uint8_t twi_writeTo(uint8_t address, uint8_t* data, uint8_t length, uint8_t wait, uint8_t sendStop)
{
  uint8_t i;

  // ensure data will fit into buffer
  if(TWI_BUFFER_LENGTH < length)
	{ return 1;}

  while(TWI_READY != twi_state)
	{return (5);}
	  
  twi_state = TWI_MTX;
  twi_sendStop = sendStop;
  // reset error state (0xFF.. no error occurred)
  twi_error = 0xFF;

  // initialize buffer iteration vars
  twi_master_txBufferIndex = 0;
  twi_master_txBufferLength = length;
  
  // copy data to twi buffer
  for(i = 0; i < length; ++i){
    twi_master_txBuffer[i] = data[i];
  }
  
  // build sla+w, slave device address + w bit
  twi_slarw = TW_WRITE;
  twi_slarw |= SLV_ADDRESS << 1;
  
  // if we're in a repeated start, then we've already sent the START
  // in the ISR. Don't do it again.
  //
  if (true == twi_inRepStart) {
    // if we're in the repeated start state, then we've already sent the start,
    // (@@@ we hope), and the TWI statemachine is just waiting for the address byte.
    // We need to remove ourselves from the repeated start state before we enable interrupts,
    // since the ISR is ASYNC, and we could get confused if we hit the ISR before cleaning
    // up. Also, don't enable the START interrupt. There may be one pending from the 
    // repeated start that we sent ourselves, and that would really confuse things.
    twi_inRepStart = false;			// remember, we're dealing with an ASYNC ISR

    do 
	{ TWDR = twi_slarw;
    } while(TWCR & (1<<TWWC));
	
    TWCR = (1<<TWINT) | (1<<TWEA) | (1<<TWEN) | (1<<TWIE);	// enable INTs, but not START
  } else {
    // send start condition
    TWCR = (1<<TWINT) | (1<<TWEA) | (1<<TWEN) | (1<<TWIE) | (1<<TWSTA);	// enable INTs
  }

  // wait for write operation to complete
  while(wait && (TWI_MTX == twi_state));
  
  if (twi_error == 0xFF)
    return 0;	// success
  else if (twi_error == TW_MT_SLA_NACK)
    return 2;	// error: address send, nack received
  else if (twi_error == TW_MT_DATA_NACK)
    return 3;	// error: data send, nack received
  else
    return 4;	// other twi error
}

void twi_setTimeoutInMicros(uint32_t timeout, bool reset_with_timeout){
  twi_timed_out_flag = false;
  twi_timeout_us = timeout;
  twi_do_reset_on_timeout = reset_with_timeout;
}

void twi_handleTimeout(bool reset){
  twi_timed_out_flag = true;

  if (reset) {
    // remember bitrate and address settings
    uint8_t previous_TWBR = TWBR;
    uint8_t previous_TWAR = TWAR;

    // reset the interface
    twi_disable();
    twi_init();

    // reapply the previous register values
    TWAR = previous_TWAR;
    TWBR = previous_TWBR;
  }
}
